HHH-16430 Simplify construction of set of ansiSQL2003 keywords